# gecko-dev

./: Cargo.toml
config/makefiles/: rust.mk
docshell/base/: nsDocShell.cpp
dom/network/: TCPSocket.cpp
extensions/net_test/: moz.build
extensions/net_test/addon/: harness-options.json  install.rdf  network_tests.xpi
extensions/net_test/src/: Ack.cpp  Ack.h  FileWriter.cpp  FileWriter.h  HelpFunctions.cpp  HelpFunctions.h  NetworkTest.idl  NetworkTestImp.cpp  NetworkTestImp.h  TCP.cpp  TCP.h  UDP.cpp  UDP.h  config.h  moz.build
mobile/android/app/: mobile.js
modules/libpref/init/: all.js
netwerk/base/: Dashboard.cpp  Predictor.cpp  ProxyAutoConfig.cpp  nsISocketTransport.idl  nsSocketTransport2.cpp  nsSocketTransport2.h  nsSocketTransportService2.cpp  nsUDPSocket.cpp  security-prefs.js
netwerk/dns/: DNSRequestChild.cpp  TRR.cpp  TRR.h  TRRService.cpp  nsDNSService2.cpp  nsHostResolver.cpp  nsHostResolver.h
netwerk/protocol/http/: ASpdySession.cpp  ASpdySession.h  AlternateServices.cpp  (+35 more)
netwerk/socket/: Http2ToSdt.cpp  Http2ToSdt.h  SDTLower.cpp  SDTLower.h  SDTSocketProvider.cpp  SDTSocketProvider.h  SDTSocketProvider2.cpp  SDTUpper.cpp  SDTUpper.h  congestion_control.h  moz.build  nsISSLSocketControl.idl  nsISSLSocketControlExtended.idl  nsSOCKSIOLayer.cpp  proxy.cpp  proxy2.cpp  qPacketQueue.h  sdt.c  sdt.h  sdt_common.h  sdtlib.c  sdtlib.h  tcp_general.c  tcp_general.h  uLayer.c
netwerk/socket/neqo_glue/: Cargo.toml  NeqoHttp3Conn.h  cbindgen.toml  moz.build  neqo_glue_ffi.h
netwerk/socket/neqo_glue/src/: lib.rs
xpcom/base/: ErrorList.py
(+51 files in other folders)
