[package]
name = "neqo_glue"
version = "0.1.0"
authors = ["Dragana Damjanovic <dd.mozilla@gmail.com>"]
edition = "2018"

[lib]
name = "neqo_glue"

[dependencies]
neqo-http3 = { version = "0.1", path = "../neqo/neqo-http3" }
neqo-transport = { version = "0.1", path = "../neqo/neqo-transport" }
neqo-crypto = { version = "0.1", path = "../neqo/neqo-crypto" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../xpcom/rust/xpcom" }
